--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,14 +2,92 @@
     background-color: #333;
     color: #fff;
     padding: 10px;
+    display: flex;
+    align-items: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.navbar-logo {
+    color: #fff;
+    margin-right: auto;
+    margin-left: 10px;
+    font-size: 120%;
+}
+
+.navbar-links {
+    display: flex;
+    margin-right: 55%;
+
 }
 
 .navbar a {
     color: #fff;
     text-decoration: none;
     margin-right: 10px;
+    padding: 5px;
 }
 
 .navbar a.active {
     font-weight: bold;
 }
+
+.navbar-links a {
+    color: #fff;
+    text-decoration: none;
+    margin-right: 20px;
+}
+.insured-h {
+    margin-top: 5%;
+    margin-left: 8%;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+
+}
+
+.button-insured {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #6495ED;
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    border-radius: 4px;
+}
+
+.insured-table {
+    width: 85%;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: collapse;
+    font-family: 'Open Sans', sans-serif;
+
+}
+
+.insured-table th, .insured-table td {
+    padding: 8px;
+    border: 1px solid #ccc;
+
+}
+.insured-table th:nth-child(2),
+.insured-table td:nth-child(2) {
+    width: 40%;
+}
+
+.insured-table th:nth-child(1),
+.insured-table td:nth-child(1),
+.insured-table th:nth-child(3),
+.insured-table td:nth-child(3) {
+    width: 30%;
+}
+
+.insured-table th {
+    background-color: #f2f2f2;
+    text-align: left;
+
+}
+
