Upravený base.html, urls.py a view.py

--- a/evidence/templates/base.html
+++ b/evidence/templates/base.html
@@ -7,9 +7,16 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="/" class="active">Homepage</a>
-        <a href="/about/">About</a>
-        <!-- Přidejte další odkazy podle potřeby -->
+        <div class="navbar-logo">
+            <a href="/">InsuredApp</a>
+        </div>
+
+        <div class="navbar-links">
+            <a href="/insured/">Insured</a>
+            <a href="/insurance/">Insurance</a>
+            <a href="/events/">Insured Events</a>
+            <a href="/about/">About App</a>
+        </div>
     </div>
 
     <div class="content">
