Reworked models.py

--- a/evidence/templates/insured.html
+++ b/evidence/templates/insured.html
@@ -18,7 +18,7 @@
         <tbody>
             {% for insured in insureds %}
                 <tr>
-                    <td>{{ insured.user.first_name }} {{ insured.user.last_name }}</td>
+                    <td>{{ insured.first_name }} {{ insured.last_name }}</td>
                     <td>{{ insured.city }}</td>
                     <td></td>
                 </tr>
