--- a/evidence/templates/insured.html
+++ b/evidence/templates/insured.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1 class="insured-h">Insureds</h1>
     <div class="center">
-        <a href="#" class="button-insured">New Insured</a>
+        <a href="{% url 'new_insured' %}" class="button-insured">New Insured</a>
     </div>
     <table class="insured-table">
         <thead>
