Create and implement add_insurance.html. Implement add_insurance. Reworked model Insurance. Add button add_insurance to insured_detail.html. Create InsuranceForm. Migrate databaze.

--- a/evidence/templates/insured_detail.html
+++ b/evidence/templates/insured_detail.html
@@ -46,4 +46,5 @@
             </tbody>
         </table>
     </div>
+    <a href="{% url 'add_insurance' %}" class="add-insurance-button">Add Insurance</a>
 {% endblock %}
