Reworked model Insurance. Reworked view add_insurance. Reworked insured_detail.html. Change Url path in urls.py. Migrate databaze.

--- a/evidence/templates/insured_detail.html
+++ b/evidence/templates/insured_detail.html
@@ -46,5 +46,5 @@
             </tbody>
         </table>
     </div>
-    <a href="{% url 'add_insurance' %}" class="add-insurance-button">Add Insurance</a>
+    <a href="{% url 'add_insurance' insured_id=insured.id %}">Add Insurance</a>
 {% endblock %}
