Create and implement template, view for Insurances. Apply styles for insurances.html.

--- a/evidence/templates/base.html
+++ b/evidence/templates/base.html
@@ -13,7 +13,7 @@
 
         <div class="navbar-links">
             <a href="/insured/">Insured</a>
-            <a href="/insurance/">Insurance</a>
+            <a href="/insurances/">Insurance</a>
             <a href="/events/">Insured Events</a>
             <a href="/about/">About App</a>
         </div>
