--- a/evidence/templates/insured.html
+++ b/evidence/templates/insured.html
@@ -36,7 +36,11 @@
                 <tr>
                     <td><a href="{% url 'insured_detail' insured.id %}">{{ insured.first_name }} {{ insured.last_name }}</a></td>
                     <td>{{ insured.street }}, {{ insured.city }}</td>
-                    <td></td>
+                    <td><form method="post" action="{% url 'delete_insured' insured.id %}">
+                            {% csrf_token %}
+                            <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this insured?')">Delete</button>
+                        </form>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
