--- a/evidence/templates/new_insured.html
+++ b/evidence/templates/new_insured.html
@@ -3,30 +3,10 @@
 {% block title %}New Insured{% endblock %}
 
 {% block content %}
-<h1 class="new-insured-h">New Insured</h1>
-<form method="POST">
-    {% csrf_token %}
-    <label for="first_name">First Name:</label>
-    <input type="text" name="first_name" id="first_name"><br><br>
-
-    <label for="last_name">Last Name:</label>
-    <input type="text" name="last_name" id="last_name"><br><br>
-
-    <label for="email">Email:</label>
-    <input type="email" name="email" id="email"><br><br>
-
-    <label for="phone">Phone:</label>
-    <input type="text" name="phone" id="phone"><br><br>
-
-    <label for="street">Street:</label>
-    <input type="text" name="street" id="street"><br><br>
-
-    <label for="city">City:</label>
-    <input type="text" name="city" id="city"><br><br>
-
-    <label for="zipcode">Zip Code:</label>
-    <input type="text" name="zipcode" id="zipcode"><br><br>
-
-    <input type="submit" value="Submit">
-</form>
+    <h1 class="new-insured-h">New Insured</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Submit">
+    </form>
 {% endblock %}
