--- a/evidence/templates/insured.html
+++ b/evidence/templates/insured.html
@@ -40,6 +40,7 @@
                             {% csrf_token %}
                             <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this insured?')">Delete</button>
                         </form>
+                        <a href="{% url 'edit_insured' insured.id %}" class="edit-button">Edit</a>
                     </td>
                 </tr>
             {% endfor %}
