--- a/evidence/templates/insured_detail.html
+++ b/evidence/templates/insured_detail.html
@@ -45,6 +45,7 @@
                         {% csrf_token %}
                             <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this insurance?')">Delete</button>
                         </form>
+                        <a href="{% url 'edit_insurance' insurance_id=policy.id %}">Edit</a>
                     </td>
                 </tr>
             {% endfor %}
