--- a/evidence/templates/insurances.html
+++ b/evidence/templates/insurances.html
@@ -15,7 +15,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for insurance in insurances %}
+      {% for insurance in page_obj %}
         <tr>
           <td><a href="{% url 'insurance_detail' insurance_id=insurance.id %}">{{ insurance.get_type_display }}</a></td>
           <td><a href="{% url 'insured_detail' insured_id=insurance.insurance.first.id %}">{{ insurance.insured_names }}</a></td>
@@ -26,4 +26,17 @@
       {% endfor %}
     </tbody>
   </table>
+
+  <!-- Stránkování -->
+  <div class="pagination">
+    {% if page_obj.has_previous %}
+      <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+    {% endif %}
+
+    <span class="current-page">{{ page_obj.number }}</span>
+
+    {% if page_obj.has_next %}
+      <a href="?page={{ page_obj.next_page_number }}">Next</a>
+    {% endif %}
+  </div>
 {% endblock %}
