--- a/evidence/templates/insured.html
+++ b/evidence/templates/insured.html
@@ -32,11 +32,12 @@
             </tr>
         </thead>
         <tbody>
-            {% for insured in insureds %}
+            {% for insured in page_obj %}
                 <tr>
                     <td><a href="{% url 'insured_detail' insured.id %}">{{ insured.first_name }} {{ insured.last_name }}</a></td>
                     <td>{{ insured.street }}, {{ insured.city }}</td>
-                    <td><form method="post" action="{% url 'delete_insured' insured.id %}">
+                    <td>
+                        <form method="post" action="{% url 'delete_insured' insured.id %}">
                             {% csrf_token %}
                             <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this insured?')">Delete</button>
                         </form>
@@ -46,4 +47,17 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <!-- Stránkování -->
+    <div class="pagination">
+        {% if page_obj.has_previous %}
+            <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        {% endif %}
+
+        <span class="current-page">{{ page_obj.number }}</span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">Next</a>
+        {% endif %}
+    </div>
 {% endblock %}
