--- a/evidence/templates/insured_detail.html
+++ b/evidence/templates/insured_detail.html
@@ -53,4 +53,9 @@
         </table>
     </div>
     <a href="{% url 'add_insurance' insured_id=insured.id %}">Add Insurance</a>
+    <a href="{% url 'edit_insured' insured.id %}">Edit Insured</a>
+    <form method="post" action="{% url 'delete_insured' insured.id %}">
+        {% csrf_token %}
+        <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this insured?')">Delete</button>
+    </form>
 {% endblock %}
