--- a/evidence/templates/base.html
+++ b/evidence/templates/base.html
@@ -14,7 +14,7 @@
         <div class="navbar-links">
             <a href="/insured/">Insured</a>
             <a href="/insurances/">Insurance</a>
-            <a href="/events/">Insured Events</a>
+            <a href="/insured_events/">Insured Events</a>
             <a href="/about/">About App</a>
              {% if user.is_authenticated %}
             <span>{{ user.username }}</span>
