Create and Implement insurance_event_detail.html. Implement view insurance_event_detail. Repair column Insured in template insurances.html and insured_events.html.

--- a/evidence/templates/insurances.html
+++ b/evidence/templates/insurances.html
@@ -18,7 +18,11 @@
       {% for insurance in page_obj %}
         <tr>
           <td><a href="{% url 'insurance_detail' insurance_id=insurance.id %}">{{ insurance.get_type_display }}</a></td>
-          <td><a href="{% url 'insured_detail' insured_id=insurance.insurance.first.id %}">{{ insurance.insured_names }}</a></td>
+          <td>
+            {% for insured in insurance.insurance.all %}
+              <a href="{% url 'insured_detail' insured_id=insured.id %}">{{ insured.first_name }} {{ insured.last_name }}</a>{% if not forloop.last %}, {% endif %}
+            {% endfor %}
+          </td>
           <td>{{ insurance.subject }}</td>
           <td>{{ insurance.amount }} Kč</td>
           <td>{{ insurance.valid_until }}</td>
