--- a/evidence/templates/base.html
+++ b/evidence/templates/base.html
@@ -14,14 +14,14 @@
         <div class="navbar-links">
             <a href="/insured/">Insured</a>
             <a href="/insurances/">Insurance</a>
-            <a href="/insured_events/">Insured Events</a>
-            <a href="/about/">About App</a>
+            <a href="/insurance_events/">Events</a>
+            <a href="/about/">About</a>
              {% if user.is_authenticated %}
             <span>{{ user.username }}</span>
             <a href="/logout/">Logout</a>
             {% else %}
             <a href="/login/">Login</a>
-            <a href="/signup/">Sign Up</a>
+            <a href="/signup/">Sign_Up</a>
             {% endif %}
         </div>
     </div>
