--- a/evidence/templates/insurance_events.html
+++ b/evidence/templates/insurance_events.html
@@ -49,4 +49,5 @@
       {% endfor %}
     </tbody>
   </table>
+  <a href="{% url 'create_event' %}" class="create-event-button">Create Event</a>
 {% endblock %}
