Create and implement edit_event view. Add a href to edit_event.html. Create and implement edit_event.html.

--- a/evidence/templates/insurance_events.html
+++ b/evidence/templates/insurance_events.html
@@ -44,6 +44,7 @@
               {% csrf_token %}
                 <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this event?')">Delete</button>
             </form>
+            <a href="{% url 'edit_event' event_id=event.id %}" class="edit-button">Edit</a>
           </td>
         </tr>
       {% endfor %}
