--- a/evidence/templates/insurances.html
+++ b/evidence/templates/insurances.html
@@ -12,6 +12,7 @@
         <th>Subject</th>
         <th>Amount</th>
         <th>Valid Until</th>
+        <th>Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -26,6 +27,13 @@
           <td>{{ insurance.subject }}</td>
           <td>{{ insurance.amount }} Kč</td>
           <td>{{ insurance.valid_until }}</td>
+          <td>
+            <a href="{% url 'edit_insurance' insurance_id=insurance.id %}" class="edit-button">Edit</a>
+            <form method="post" action="{% url 'delete_insurance' insurance_id=insurance.id %}">
+                {% csrf_token %}
+                <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this insurance?')">Delete</button>
+            </form>
+          </td>
         </tr>
       {% endfor %}
     </tbody>
