--- a/evidence/templates/insured.html
+++ b/evidence/templates/insured.html
@@ -21,7 +21,7 @@
     {% endif %}
     <h1 class="insured-h">Insureds</h1>
     <div class="center">
-        <a href="{% url 'new_insured' %}" class="button-insured">New Insured</a>
+        <a href="{% url 'new_insured' %}" class="button-add">New Insured</a>
     </div>
     <table class="insured-table">
         <thead>
