--- a/evidence/templates/insured_detail.html
+++ b/evidence/templates/insured_detail.html
@@ -52,10 +52,7 @@
             </tbody>
         </table>
     </div>
-    <a href="{% url 'add_insurance' insured_id=insured.id %}">Add Insurance</a>
-    <a href="{% url 'edit_insured' insured.id %}">Edit Insured</a>
-    <form method="post" action="{% url 'delete_insured' insured.id %}">
-        {% csrf_token %}
-        <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this insured?')">Delete</button>
-    </form>
+    <a href="{% url 'add_insurance' insured_id=insured.id %}" class="button-add">Add Insurance</a>
+    <a href="{% url 'edit_insured' insured.id %}" class="button-edit">Edit Insured</a>
+    <a href="{% url 'delete_insured' insured.id %}" class="button-delete" onclick="return confirm('Are you sure you want to delete this insured?')">Delete</a>
 {% endblock %}
