--- a/evidence/templates/insurances.html
+++ b/evidence/templates/insurances.html
@@ -28,11 +28,8 @@
           <td>{{ insurance.amount }} Kč</td>
           <td>{{ insurance.valid_until }}</td>
           <td>
-            <a href="{% url 'edit_insurance' insurance_id=insurance.id %}" class="edit-button">Edit</a>
-            <form method="post" action="{% url 'delete_insurance' insurance_id=insurance.id %}">
-                {% csrf_token %}
-                <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this insurance?')">Delete</button>
-            </form>
+            <a href="{% url 'edit_insurance' insurance_id=insurance.id %}" class="button button-edit">Edit</a>
+            <a href="{% url 'delete_insurance' insurance_id=insurance.id %}" class="button button-delete" onclick="return confirm('Are you sure you want to delete this insurance?')">Delete</a>
           </td>
         </tr>
       {% endfor %}
