--- a/evidence/templates/insured_detail.html
+++ b/evidence/templates/insured_detail.html
@@ -41,18 +41,15 @@
                     <td><a href="{% url 'insurance_detail' insurance_id=policy.id %}">{{ policy.get_type_display }}</a></td>
                     <td>{{ policy.amount }} Kč</td>
                   <td>
-                        <form method="post" action="{% url 'delete_insurance' insurance_id=policy.id %}">
-                        {% csrf_token %}
-                            <button type="submit" class="delete-button" onclick="return confirm('Are you sure you want to delete this insurance?')">Delete</button>
-                        </form>
-                        <a href="{% url 'edit_insurance' insurance_id=policy.id %}">Edit</a>
+                        <a href="{% url 'delete_insurance' insurance_id=policy.id %}" class="button button-delete" onclick="return confirm('Are you sure you want to delete this insurance?')">Delete</a>
+                        <a href="{% url 'edit_insurance' insurance_id=policy.id %}" class="button button-edit">Edit</a>
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
     </div>
-    <a href="{% url 'add_insurance' insured_id=insured.id %}" class="button-add">Add Insurance</a>
-    <a href="{% url 'edit_insured' insured.id %}" class="button-edit">Edit Insured</a>
-    <a href="{% url 'delete_insured' insured.id %}" class="button-delete" onclick="return confirm('Are you sure you want to delete this insured?')">Delete</a>
+    <a href="{% url 'add_insurance' insured_id=insured.id %}" class="button button-add">Add Insurance</a>
+    <a href="{% url 'edit_insured' insured.id %}" class="button button-edit">Edit Insured</a>
+    <a href="{% url 'delete_insured' insured.id %}" class="button button-delete" onclick="return confirm('Are you sure you want to delete this insured?')">Delete</a>
 {% endblock %}
