--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,34 +61,25 @@
 
 }
 
-.button-add {
+.button {
     display: inline-block;
-    padding: 10px 20px;
-    background-color: #6495ED;
+    padding: 5px 10px;
     color: #fff;
     text-decoration: none;
     font-size: 18px;
     border-radius: 4px;
+}
+
+.button-add {
+    background-color: #6495ED;
 }
 
 .button-edit {
-    display: inline-block;
-    padding: 10px 20px;
     background-color: #ffad33;
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    border-radius: 4px;
 }
 
 .button-delete {
-    display: inline-block;
-    padding: 10px 20px;
     background-color: #e60000;
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    border-radius: 4px;
 }
 
 
