--- a/evidence/templates/insured.html
+++ b/evidence/templates/insured.html
@@ -20,7 +20,7 @@
     </script>
     {% endif %}
     <h1 class="insured-h">Insureds</h1>
-    <div class="center">
+    <div class="main-buttons">
         <a href="{% url 'new_insured' %}" class="button button-add">New Insured</a>
     </div>
     <table class="insured-table">
