--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,20 +54,15 @@
     margin-left: 8%;
 }
 
-.center {
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-
-}
 
 .button {
     display: inline-block;
     padding: 5px 10px;
     color: #fff;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 14px;
     border-radius: 4px;
+
 }
 
 .button-add {
@@ -80,6 +75,22 @@
 
 .button-delete {
     background-color: #e60000;
+}
+
+.main-buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+
+}
+
+.main-buttons a:hover {
+  background-color: #4169E1;
+}
+
+.main-buttons .button {
+    margin-right: 10px;
+    font-size: 20px;
 }
 
 
@@ -98,7 +109,7 @@
 .insurances-table th, .insurances-table td,
  .insured-events-table th, .insured-events-table td {
     padding: 8px;
-    border: 2px solid #ccc;
+    border: 1px solid #1a001a;
 
 }
 .insured-table th:nth-child(2),
@@ -164,6 +175,37 @@
     font-size: 1.5em;
     font-weight: bold;
     margin-bottom: 10px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination a {
+  display: inline-block;
+  padding: 8px 12px;
+  background-color: #6495ED;
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 4px;
+  margin-right: 5px;
+}
+
+.pagination a:hover {
+  background-color: #4169E1;
+}
+
+.pagination .current-page {
+  display: inline-block;
+  padding: 8px 12px;
+  background-color: #A9A9A9;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 4px;
+  margin-right: 5px;
 }
 
 
