--- a/static/css/style.css
+++ b/static/css/style.css
@@ -208,4 +208,58 @@
   margin-right: 5px;
 }
 
+.insured-form {
+    max-width: 75%;
+    margin: 18px;
+    padding: 18px;
+    border-radius: 8px;
+}
 
+.form-column {
+    display: inline-block;
+    width: 40%;
+    vertical-align: top;
+    margin-right: 4%;
+}
+
+.form-row {
+    margin-bottom: 20px;
+    margin-left: 8%;
+}
+
+.form-row label {
+    display: block;
+    font-size: 18px;
+    margin-bottom: 4px;
+}
+
+.form-row input[type="text"],
+.form-row input[type="email"],
+.form-row input[type="tel"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.submit-button {
+    display: block;
+    margin: 0 auto;
+    margin-top: 3%;
+    padding: 10px 30px;
+    background-color: #6495ED;
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.submit-button:hover {
+    background-color: #4169E1;
+}
+
+.new-insured-h {
+    margin: 3% 0 0 5%;
+}
