--- a/evidence/templates/new_insured.html
+++ b/evidence/templates/new_insured.html
@@ -8,33 +8,33 @@
         {% csrf_token %}
         <div class="form-column">
             <div class="form-row">
-                <label for="{{ form.first_name.id_for_label }}">First Name</label>
+                <label>First Name</label>
                 {{ form.first_name }}
             </div>
             <div class="form-row">
-                <label for="{{ form.email.id_for_label }}">Email</label>
+                <label>Email</label>
                 {{ form.email }}
             </div>
             <div class="form-row">
-                <label for="{{ form.street.id_for_label }}">Street</label>
+                <label>Street</label>
                 {{ form.street }}
             </div>
         </div>
         <div class="form-column">
             <div class="form-row">
-                <label for="{{ form.last_name.id_for_label }}">Last Name</label>
+                <label>Last Name</label>
                 {{ form.last_name }}
             </div>
             <div class="form-row">
-                <label for="{{ form.city.id_for_label }}">City</label>
+                <label>City</label>
                 {{ form.city }}
             </div>
             <div class="form-row">
-                <label for="{{ form.zipcode.id_for_label }}">Zip Code</label>
+                <label>Zip Code</label>
                 {{ form.zipcode }}
             </div>
             <div class="form-row">
-                <label for="{{ form.phone.id_for_label }}">Phone</label>
+                <label>Phone</label>
                 {{ form.phone }}
             </div>
         </div>
