update new_insured.html and style.

--- a/evidence/templates/new_insured.html
+++ b/evidence/templates/new_insured.html
@@ -38,7 +38,7 @@
                 {{ form.phone }}
             </div>
         </div>
-        <div class="form-row">
+        <div class="submit-button-container">
             <input type="submit" value="Save" class="submit-button">
         </div>
     </form>
