--- a/evidence/templates/edit_insured.html
+++ b/evidence/templates/edit_insured.html
@@ -1,12 +1,45 @@
 {% extends 'base.html' %}
 
-{% block title %}Edit Insured{% endblock %}
+{% block title %}New Insured{% endblock %}
 
 {% block content %}
-<h1 class="edit-insured-h">Edit Insured</h1>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Update</button>
-</form>
+    <h2 class="new-insured-h">New Insured</h2>
+    <form method="POST" class="insured-form">
+        {% csrf_token %}
+        <div class="form-column">
+            <div class="form-row">
+                <label>First Name</label>
+                {{ form.first_name }}
+            </div>
+            <div class="form-row">
+                <label>Email</label>
+                {{ form.email }}
+            </div>
+            <div class="form-row">
+                <label>Street</label>
+                {{ form.street }}
+            </div>
+        </div>
+        <div class="form-column">
+            <div class="form-row">
+                <label>Last Name</label>
+                {{ form.last_name }}
+            </div>
+            <div class="form-row">
+                <label>City</label>
+                {{ form.city }}
+            </div>
+            <div class="form-row">
+                <label>Zip Code</label>
+                {{ form.zipcode }}
+            </div>
+            <div class="form-row">
+                <label>Phone</label>
+                {{ form.phone }}
+            </div>
+        </div>
+        <div class="submit-button-container">
+            <input type="submit" value="Save" class="submit-button">
+        </div>
+    </form>
 {% endblock %}
