--- a/evidence/templates/create_event.html
+++ b/evidence/templates/create_event.html
@@ -3,10 +3,12 @@
 {% block title %}Create Insurance Event{% endblock %}
 
 {% block content %}
-  <h2>Create Insurance Event</h2>
-  <form method="post">
+  <h2 class="create-event-h">Create Insurance Event</h2>
+  <form method="post" class="my-form">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Create</button>
+    <div class="submit-button-create-event">
+        <button type="submit" class="submit-button">Create</button>
+    </div>
   </form>
 {% endblock %}
