Create template, view and url new_insurance. Add name of Insured in edit_insurance.html. Create new form NewInsuranceForm.

--- a/evidence/templates/insurances.html
+++ b/evidence/templates/insurances.html
@@ -4,6 +4,9 @@
 
 {% block content %}
   <h2 class="insurances-h">Insurances</h2>
+  <div class="main-buttons">
+        <a href="{% url 'new_insurance' %}" class="button button-add">New Insurance</a>
+  </div>
   <table class="insurances-table">
     <thead>
       <tr>
