--- a/evidence/templates/edit_insurance.html
+++ b/evidence/templates/edit_insurance.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Add Insurance{% endblock %}
+{% block title %}Edit Insurance{% endblock %}
 
 {% block content %}
     <h2 class="add-insurance-h">Edit Insurance to {{ insured.first_name }} {{ insured.last_name }}</h2>
